<resources>
    <string name="app_name">Practica 2 Android</string>
    <string name="opencv_init_error">No se pudo inicializar OpenCV</string>
    <string name="fps_label">FPS</string>
    <string name="modo_vista_label">Modo Vista: </string>
    <string name="alpha_blue_label">Alpha Karl Struss:</string>
    <string name="s_min_label">Saturación Mínima:</string>
    <string name="v_min_label">Brillo Mínimo:</string>
    <string name="hsv_hue_min_label">HSV Hue Mínimo (Fondo):</string>
    <string name="hsv_hue_max_label">HSV Hue Máximo (Fondo):</string>
    <string name="ruido_gaussiano_label">Ruido Gaussiano (Primer Plano):</string>
    <string name="ruido_speckle_label">Ruido Speckle (Primer Plano):</string>
    <string name="filtro_mediana_label">Filtro Mediana Kernel:</string>
</resources>
